<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_margin"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sortButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/s_margin"
            android:background="@drawable/shape_sort_back"
            android:drawableStart="@drawable/ic_sort"
            android:drawablePadding="@dimen/s_margin"
            android:text="@string/sort_by"
            android:textColor="#616161"
            android:textSize="@dimen/description_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/searchEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/searchEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/s_margin"
            android:layout_marginTop="@dimen/m_margin"
            android:layout_marginEnd="@dimen/m_margin"
            android:background="@drawable/shape_grey_border_16dp"
            android:drawableStart="@drawable/ic_loupe"
            android:drawablePadding="@dimen/s_margin"
            android:ems="10"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/s_margin"
            app:hintTextColor="#757575"
            app:layout_constraintEnd_toStartOf="@+id/sortButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m_margin"
            android:layout_marginTop="32dp"
            android:text="@string/dummy_header"
            android:textColor="@color/black"
            android:textSize="@dimen/x_header_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchEt" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/m_margin"
            android:text="@string/see_more"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productRv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/s_margin"
            android:layout_marginTop="@dimen/s_margin"
            android:layout_marginEnd="@dimen/s_margin"
            tools:listitem="@layout/adapter_product_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/black"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.74" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>